# gxformat2

./: .coveragerc  .gitignore  .pre-commit-config.yaml.sample  .readthedocs.yaml  .travis.yml  ABSTRACTIONS_APPLICATIONS_PLANNING.md  CLAUDE.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  DEPENDENCY_GXFORMAT2_ABSTRACTIONS.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  build_schema.sh  dev-requirements.txt  galaxy_bootstrap.min.css  galaxy_docs.css  native_v0_1.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  v19_09.html
.claude/commands/: ready-release.md  update-schema.md
.github/workflows/: deploy.yaml  maven.yml  publishdocs.yml  tox.yml  typescript.yaml  zizmor.yml
docs/: cli.rst  cli_abstract_export.rst  cli_layout.rst  cli_lint.rst  cli_to_format2.rst  cli_to_native.rst  cli_viz.rst  conf.py  design.md  developing.rst  examples.rst  gxformat2.cytoscape.rst  gxformat2.examples.rst  gxformat2.mermaid.rst  gxformat2.normalized.rst  gxformat2.rst  gxformat2.schema.rst  index.rst  installation.rst  modules.rst  requirements.txt  usage.md
docs/_ext/: examples_catalog.py
docs/images/: build_amr.py
gxformat2/: __init__.py  _comment_helpers.py  _labels.py  _scripts.py  _semantic_validators.py  _yaml.py  abstract.py  converter.py  cytoscape.py  draft.py  export.py  interface.py  lint.py  lint_profiles.py  lint_profiles.yml  lint_rules.py  linting.py  main.py  markdown_parse.py  model.py  native.py  normalize.py  options.py  schema_rules.py  schema_rules.yml  testing.py  to_format2.py  to_native.py  validators.py  yaml.py
gxformat2/cytoscape/: __init__.py  _builder.py  _cli.py  _layout.py  _render.py  cytoscape.html  models.py
gxformat2/examples/: __init__.py  catalog.yml
gxformat2/layout/: __init__.py  _builder.py  _cli.py  _properties.py  _sugiyama.py
gxformat2/mermaid/: __init__.py  _builder.py  _cli.py
java/: README.md  pom.xml
schema/: galaxy_docs.css
scripts/: bootstrap_history.py  check_history_entries.py  commit_version.py  generate_pydantic.py  new_version.py  patch_generated_pydantic.py  print_version_for_release.py
tests/: _helpers.py  example_wfs.py  fetch_workflows.sh  multi-string.ga  muti_data_example.ga  test_auto_label.py  test_backward_compatiblitiy.py  test_basic.py  test_comments.py  test_cytoscape.py  test_cytoscape_layout.py  test_cytoscape_layout_integration.py  test_declarative_normalized.py  test_examples_catalog.py  test_expand_inline_tool.py  test_export_abstract.py  test_inline_tool_helpers.py  test_inline_tool_roundtrip.py  test_interface_compat.py  test_interop_tests.py  test_layout.py  test_layout_properties.py  test_legacy_compat.py  test_lint.py  test_lint_best_practices.py  test_lint_planemo_compat.py  test_lint_profiles.py  test_linting.py  test_load_native.py  test_markdown_validate.py  test_mermaid.py  test_model_helpers.py  test_native_schema.py  test_normalize.py  test_normalized.py  test_post_job_action_import.py  test_pydantic_schema.py  test_resolve_source_reference.py  test_schema.py  test_schema_rules_catalog.py  (+5 more)
typescript/: package-lock.json  package.json
(+479 files in other folders)
