[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gxformat2"
dynamic = ["version", "dependencies"]
description = "Galaxy Workflow Format 2 Descriptions"
readme = "README.rst"
authors = [
    {name = "Galaxy Project and Community", email = "jmchilton@gmail.com"},
]
license = "MIT"
license-files = [
    "LICENSE",
]
keywords = ["galaxy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"

[project.optional-dependencies]
bioblend = ["bioblend"]

[project.scripts]
gxwf-to-native = "gxformat2.converter:main"
gxwf-to-format2 = "gxformat2.export:main"
gxwf-lint = "gxformat2.lint:main"
gxwf-viz = "gxformat2.cytoscape:main"
gxwf-abstract-export = "gxformat2.abstract:main"
gxwf-mermaid = "gxformat2.mermaid:main"

[project.urls]
Homepage = "https://github.com/galaxyproject/gxformat2"

[dependency-groups]
lint = [
    "black",
    "flake8",
    "flake8-bugbear",
    "isort",
    "ruff",
]
mypy = [
    "mypy",
    "types-PyYAML",
    "types-requests",
]
test = [
    "pytest",
    "pydantic>=2.0",
    {include-group = "dev"},
]
dev = [
    "schema-salad[pycodegen]",
    "schema-salad-plus-pydantic>=0.1.8",
    "cwltool>=3.0.20200807132242",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-argparse",
    "sphinxcontrib-mermaid",
]

[tool.ruff]
exclude = [
    "gxformat2/schema/v19_09.py",
    "gxformat2/schema/native_v0_1.py",
    "gxformat2/schema/gxformat2.py",
    "gxformat2/schema/gxformat2_strict.py",
    "gxformat2/schema/native.py",
    "gxformat2/schema/native_strict.py",
]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["gxformat2"]
force_alphabetical_sort_within_sections = true
skip_glob = [
    "gxformat2/schema/v19_09.py",
    "gxformat2/schema/native_v0_1.py",
    "gxformat2/schema/gxformat2.py",
    "gxformat2/schema/gxformat2_strict.py",
    "gxformat2/schema/native.py",
    "gxformat2/schema/native_strict.py",
]

[tool.black]
line-length = 120
extend-exclude = '''
^/gxformat2/schema/(v19_09|native_v0_1|gxformat2|gxformat2_strict|native|native_strict).py
'''

[tool.setuptools.dynamic]
version = {attr = "gxformat2.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
"gxformat2.examples" = ["**/*.yml", "**/*.ga"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gxformat2*"]
